--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -3,3 +3,4 @@ $color_error: #d23f51;
 $color_success: #5ca745;
 $color-gray: #f2f2f2;
 $color-gray-dark: darken(#f2f2f2, 30%);
+$color-gray-medium: darken(#f2f2f2, 10%);
