--- a/css/scss/_heading.scss
+++ b/css/scss/_heading.scss
@@ -4,18 +4,18 @@
 
 h1,h2,h3,h4,h5,h6{
 
-	&.highlighted{
+	&.ms-highlighted{
 		@include highlightedHeanding(darken($color-gray, 15%));
 
-		&.error{
+		&.ms-red{
 			@include highlightedHeanding($color-error);
 		}
 
-		&.success{
+		&.ms-green{
 			@include highlightedHeanding($color-success);
 		}
 
-		&.info{
+		&.ms-blue{
 			@include highlightedHeanding($color-info);
 		}
 	}
