--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -1,4 +1,4 @@
-.progress{
+.ms-progress{
 	width: 100%;
 	height: 1.2rem;
 	display: flex;
@@ -8,7 +8,7 @@
 	text-align: center;
 	margin: 1rem;
 
-	.progress-fill{
+	.ms-progress-fill{
 		height: 1.2rem;
 		background-color: $color-gray-dark;
 		white-space: nowrap;
@@ -19,28 +19,28 @@
 		text-align: center;
 		font-weight: bold;
 
-		&.info{
+		&.ms-blue{
 			background-color: $color-info;
 		}
 
-		&.success{
+		&.ms-green{
 			background-color: $color-success;
 		}
 
-		&.error{
+		&.ms-red{
 			background-color: $color-error;
 		}
 
-		&.gradient{
+		&.ms-gradient{
 			@include background-image(linear-gradient(to left top, #fd8157, #eb5a82));
 		}
 
-		&.striped{
+		&.ms-striped{
 			background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
 			background-size: 1rem 1rem;
 		}
 
-		&.rounded{
+		&.ms-rounded{
 			@include border-radius;
 		}
 	}
