--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -11,9 +11,10 @@
 		@include border-radius;
 	}
 
-	li.active{
+	li.ms-active{
 		background-color: $pMenuColor;
 		@include border-radius;
+
 		a{
 			color: #fff;
 		}
