--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -1,20 +1,20 @@
 .ms-progress{
 	width: 100%;
-	height: 1.2rem;
+	height: 1.3rem;
 	display: flex;
 	background-color: $color-gray;
 	@include border-radius;
 	overflow: hidden;
 	text-align: center;
-	margin: 1rem;
+	margin: 1rem 0;
 
 	.ms-progress-fill{
-		height: 1.2rem;
-		background-color: $color-gray-dark;
+		height: 1.3rem;
+		background-color: $color-gray-font;
 		white-space: nowrap;
 		font-size: .75rem;
 		text-align: center;
-		line-height: 1.2rem;
+		line-height: 1.3rem;
 		color: #fff;
 		text-align: center;
 		font-weight: bold;
@@ -42,6 +42,32 @@
 
 		&.ms-rounded{
 			@include border-radius;
+		}
+	}
+
+	&.ms-small{
+		height: 1rem;
+
+		.ms-progress-fill{
+			height: 1rem;
+			line-height: 1rem;
+		}
+	}
+
+	&.ms-large{
+		height: 1.6rem;
+
+		.ms-progress-fill{
+			height: 1.7rem;
+			line-height: 1.7rem;
+		}
+	}
+
+	&.ms-rounded{
+		border-radius: 10rem;
+
+		.ms-rounded{
+			border-radius: 10rem;
 		}
 	}
 }
