--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -18,3 +18,4 @@ $default-border-radius: .3rem;
 @import "_progressbar.scss";
 @import "_card.scss";
 @import "_menu.scss";
+@import "_content.scss";
