--- a/css/scss/_heading.scss
+++ b/css/scss/_heading.scss
@@ -4,6 +4,8 @@
 
 h1,h2,h3,h4,h5,h6{
 
+	padding: 0.5rem 0;
+
 	&.ms-red{
 		@include colorHeading($color-red);
 	}
@@ -19,36 +21,28 @@ h1,h2,h3,h4,h5,h6{
 	&.ms-gray{
 		@include colorHeading($color-gray-dark);
 	}
-
-	@for $i from 1 through 9{
-	
-		&.ms-fw-#{$i}00{
-			font-weight: #{$i}00;
-
-		}
-	}
 }
 
 h1,.ms-h1{
-	font-size: 3rem;
+	font-size: 3.1rem;
 }
 
 h2,.ms-h2{
-	font-size: 2.7rem;
+	font-size: 2.8rem;
 }
 
 h3,.ms-h3{
-	font-size: 2.4rem;
+	font-size: 2.5rem;
 }
 
 h4,.ms-h4{
-	font-size: 2.1rem;
+	font-size: 2.2rem;
 }
 
 h5,.ms-h5{
-	font-size: 1.8rem;
+	font-size: 1.9rem;
 }
 
 h6,.ms-h6{
-	font-size: 1.5rem;
+	font-size: 1.6rem;
 }
